--- a/src/components/Accodian.css
+++ b/src/components/Accodian.css
@@ -444,8 +444,8 @@ video {
 .w-8 {
   width: 2rem;
 }
-.w-full {
-  width: 100%;
+.c-full {
+  width: 50%;
 }
 .transform {
   --transform-translate-x: 0;
